survey: Sim3D TornadoVM patterns for BoA GPU port
Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>